--- a/src/components/Nvd3StackChart/template.html
+++ b/src/components/Nvd3StackChart/template.html
@@ -1,3 +1,3 @@
 <div class="stacked-area-graph">
-    <svg ref="svg" :style="{height:config.height+'px'}"></svg>
+    <svg ref="svg" :style="{height:height+'px', width:'100%'}"></svg>
 </div>
